# qrhunt

./: .gitignore  README.md  codes.xcf  pyproject.toml
src/qrhunt/: __main__.py  animals.py  app.py  app.tcss  generate.py
