[tool.poetry]
name = "qrhunt"
version = "0.1.0"
description = ""
authors = ["Vojtěch Boček <vojtech.bocek@gendigital.com>"]
readme = "README.md"
packages = [{ include = "qrhunt", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
reportlab = "^4.2.2"
segno = "^1.6.1"
textual = "^0.72.0"
art = "^6.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-mypy = "^0.10.3"
pytest-ruff = "^0.4.0"
poethepoet = "^0.27.0"
types-reportlab = "^4.2.2.20240701"
textual-dev = "^1.5.1"

[tool.poetry.scripts]
qrhunt = "qrhunt.__main__:main"

[tool.pytest.ini_options]
addopts = """
    --verbose
    --ruff
    --mypy
    """
asyncio_mode = "auto"

[tool.poe.tasks]
# Separate import sorting until https://github.com/astral-sh/ruff/issues/8232 is merged
_ruff_sort_imports = "ruff check --select I --fix ."
_ruff_format = "ruff format ."
format-code = ["_ruff_sort_imports", "_ruff_format"]

[tool.ruff]
line-length = 99
output-format = "full"
force-exclude = true
extend-exclude = ["**pb2.py", "**pb2.pyi"]

[tool.ruff.lint]
select = ["E", "F", "I", "PERF", "ARG"]
ignore = [
    "E1", # handled by formatter
    "E4", # handled by formatter
    "E5", # handled by formatter
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 99

[tool.mypy]
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
